tests/negative/gold/slice_test.gold
tests/negative/slice_test.toit:19:14: error: Can't have space between '[' and '..'
  operator [ .. ] --from --to:
             ^~
tests/negative/slice_test.toit:19:17: error: Can't have space between '..' and ']'
  operator [ .. ] --from --to:
                ^
tests/negative/slice_test.toit:31:15: error: Unexpected delimiter
  outside := 1..2
              ^~
tests/negative/slice_test.toit:6:3: error: Invalid method shape for '[..]'
  operator [..] --from --to --other:
  ^~~~~~~~~~~~~
tests/negative/slice_test.toit:18:3: error: Invalid method shape for '[..]'
  operator [..]:
  ^~~~~~~~~~~~~
tests/negative/slice_test.toit:20:3: error: Invalid method shape for '[..]'
  operator [..] --from:
  ^~~~~~~~~~~~~
tests/negative/slice_test.toit:24:4: error: Argument mismatch for 'B.[..]'
Required named argument '--to' not provided
  b[0..]
   ^
tests/negative/slice_test.toit:25:4: error: Argument mismatch for 'B.[..]'
Required named argument '--to' not provided
  b[..]
   ^
tests/negative/slice_test.toit:28:4: error: Argument mismatch for 'C.[..]'
Required named argument '--from' not provided
  c[..0]
   ^
tests/negative/slice_test.toit:29:4: error: Argument mismatch for 'C.[..]'
Required named argument '--from' not provided
  c[..]
   ^
Compilation failed.
